@@ -62,8 +62,8 @@ public class HttpServerHelper extends ServerHelper {
 
     /**
      * Default constructor. Note that many methods assume that a non-null server
-     * is set to work properly. You can use the {@link #setHelped(Server)}
-     * method for this purpose or better rely on the other constructor.
+     * is set to work properly. You can use the {@link #setHelped(T)} method for
+     * this purpose or better rely on the other constructor.
      */
     public HttpServerHelper() {
         this(null);
