@@ -16,6 +16,8 @@ Changes log
         - Fixed directory redirections in DirectoryResource class.
         - Fixed NPE in RestletFrameworkServlet. Reported by Yuri de Wit
           and fixed by Rhett Sutphin.
+        - Fixed socket closing issues with the internal HTTP connectors.
+          Reported and fixed by Kevin Conaway. 
     - API Enhancements
         - Made the org.restlet.util.Resolver generic and used it in 
           Guard to allow the user to provide a secret resolver without
